--- a/caseStudyWP/08-appendix.Rmd
+++ b/caseStudyWP/08-appendix.Rmd
@@ -7,15 +7,15 @@ After that, all subsequent sections will be turned into appendices. -->
 
 # Data Sources & Treatment for Innter South Coast Non-Fraser Chum Salmon {#app:first-appendix}
  
-### Spawner counts / escapement
+## Spawner counts / escapement
 
 We used spawning escapement data from 1953-2018. Most of the escapement data comes from the NUSEDS database (a small amount from Lower Fraser Stock Assessment for Areas 28 and 29, FSC in-river catch from some First Nations, and enhanced escapement from DFO Salmon Enhancement Program). The number of Chum salmon that return to spawn is typically counted using visual surveys.  Biologists from Fisheries and Oceans Canada and First Nations including ... (Island Marine Aquatic Working Group) *\textcolor{cyan}{LW: which ones?}* generate these data by walking streams and counting fish, *\textcolor{cyan}{LW: helicopter counts?}* and using fences or weirs on some rivers. Total escapement for each stream is usually a peak counts or estimated using the area under the curve (AUC) method.
 
-### Fishery harvest, genetics, and age
+## Fishery harvest, genetics, and age
 
 The number of chum caught in fisheries in the Inside South Coast area were taken from the DFO Clockwork Database, which includes the DFO Fishery Operating System and Sales slip databases and Genetic Stock Identification data. Age distributions for each year were taken from the Johnstone Strait fishery aggregate, as age data for specific CUs or streams was not available. Harvest data was available for 1954-2018. Age composition data was available for 1958-2018.
 
-### Data treatment
+## Data treatment
 
 We removed the summer run fish because all of the data that goes into the run reconstruction work is associated with populations that return in the fall.  
 
@@ -33,7 +33,7 @@ After these removals, the steps for preparing the data for analysis were:
   - Use proportion of wild:total escapement by CU and Area to estimate number of wild returns 
   - Use age proportions of catch to estimate age of returns and get recruits by brood year for each CU. Result is wild spawners and corresponding recruits by brood year for each CU
 
-#### Infilling of spawner escapement data
+### Infilling of spawner escapement data
 
 The data we used had years where not all streams were counted. 
 
@@ -42,9 +42,9 @@ Missing escapement values require infilling for two purposes:
 1. To ensure that all CUs have annual estimates of wild returns for input to the run reconstruction model, which allows recruits for each brood year to be estimated.
 2. To create CU-level time series of wild escapement that can be used to calculate status relative to CU-level benchmarks, as well as LRPs based on CU status.
 
-Two levels of infilling have previously been used for ISC Chum CUs (@holt_evaluating_2018; Figure \@ref(fig:chum-escapement-infill)). The first level, infilling by stream, is used when a CU has some streams counted in a year.  In this case, stream-level infilling is done by borrowing information from other streams within the same CU. The second level, infilling by CU, is used when there are no counts of spawners for a CU in a given year. We had to infill by CU to get total spawners to use for the run reconstruction, but we did not use CUs with CU-level infilling to calculate LRPs because the infilling procedure assumes that escapement is correlated between CUs in a given year. 
+Two levels of infilling have previously been used for ISC Chum CUs (@holtEvaluatingBenchmarksBiological2018; Figure \@ref(fig:chum-escapement-infill)). The first level, infilling by stream, is used when a CU has some streams counted in a year.  In this case, stream-level infilling is done by borrowing information from other streams within the same CU. The second level, infilling by CU, is used when there are no counts of spawners for a CU in a given year. We had to infill by CU to get total spawners to use for the run reconstruction, but we did not use CUs with CU-level infilling to calculate LRPs because the infilling procedure assumes that escapement is correlated between CUs in a given year. 
 
-##### Infilling by stream
+#### Infilling by stream
 
 This applies to CUs and years when there were counts in some streams in the CU in a given year. For each stream, the geometric mean of escapement over all years was calculated as the stream's average escapement. Then the total average escapement for each CU in each year was the sum of the average escapements from all streams. Then a proportion of monitored escapement in each year was the sum of average escapement of all streams with counts in a year divided by the sum of the average escapements for all streams (counted and uncounted) in that CU. The infilled escapement for a CU in given year was the sum of the observed escapements for that CU and year divided by the proportion of the monitored escapement for that CU and year. 
 
@@ -52,7 +52,7 @@ Infilling by stream typically made up a small proportion of the total escapement
 
 This method assumes that escapement among streams is correlated, which is not always the case (can have figure in appendix or quote correlation values). 
 
-##### Infilling by CU
+#### Infilling by CU
 
 If there were no counts of any streams in a CU in a given year, a second round of infilling was done with data set that had already been infilled by stream. This was the case for two CUs: Upper Knight (22 years: 1979-1980, 1982, 1984, 1989, 1991,1996,2004-18) and Bute Inlet (13 years: 2005-2006, 2008-2018). 
 
@@ -63,7 +63,7 @@ download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/
 knitr::include_graphics("figure/chum-escapement-infill.png")
 ```
 
-#### Run reconstruction to estimate recruitment
+### Run reconstruction to estimate recruitment
 
 We reconstructed the returns for each brood year to give recruits for brood years 1955-2012 (age composition data from 1958-2018, minimum fish age was 3 years, maximum fish age was 6 years). Using CU benchmarks based on stock-recruit parameters - in this case, Sgen - requires knowing the spawners and recruits (adult offspring produced by each brood year of spawners) for each brood year (spawning year). Estimating recruits requires knowing wild spawner escapement, number of wild fish caught in fisheries, and the age of these fish. 
 
